Bug fix: Default width of Clippings Manager tree list is too narrow
- Ported from Clippings 6.3.2

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -487,7 +487,7 @@ body[data-os="win"] input[type="checkbox"] + label {
 
 #clippings-tree {
     order: 1;
-    flex: 0 1 auto;
+    flex: none;
     align-self: stretch;
     width: 228px;
     min-width: 128px;
